# devpod

./: .actrc  .commitlintrc.json  .gitignore  .golangci.yaml  .goreleaser.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LOG_PERSISTENCE_ISSUE.md  LOG_TABS_IMPLEMENTATION.md  Makefile  PODMAN_PROVIDER_ANALYSIS.md  README.md  SECURITY.md  Taskfile.yml  WORKFLOW_SETUP.md  biome.json  codecov.yml  commitlint.config.mjs  community.yaml  go.mod  go.sum  main.go  package.json  renovate.json
.devcontainer/: devcontainer.json  post_create.sh
.github/: actionlint.yaml  licenses.tmpl
cmd/: build.go  delete.go  export.go  import.go  list.go  logs.go  logs_daemon.go  ping.go  profile.go  root.go  ssh.go  ssh_test.go  status.go  stop.go  troubleshoot.go  up.go  up_ide.go  up_ssh.go  up_test.go  upgrade.go  version.go
desktop/: .prettierignore  eslint.config.js  package.json  tsconfig.json
desktop-new/: components.json  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.flatpak.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: migrated.json
desktop/src-tauri/src/: action_logs.rs  custom_protocol.rs  daemon.rs  file_exists.rs  fix_env.rs  get_env.rs  install_cli.rs  main.rs  resource_watcher.rs  settings.rs  system_tray.rs  updates.rs  util.rs  window.rs
desktop/src-tauri/src/commands/: config.rs  constants.rs  delete_pro_instance.rs  delete_provider.rs  list_pro_instances.rs  list_workspaces.rs  start_daemon.rs
desktop/src-tauri/src/daemon/: client.rs
docs/: docusaurus.config.js  network-proxy.md  sidebars.js
e2e/: README.md  e2e_suite_test.go  e2e_suite_unix_test.go
feature_request/: 000_INDEX.md  001_implementation_plan.md  002_task_vs_solution_analysis.md  003_pr_1836_comparison.md  004_implementation_progress.md  005_implementation_complete.md  006_implementation_complete_final.md  007_missing_integration.md  008_integration_complete.md  009_workspace_daemon_integration.md  010_integration_test_strategy.md  011_e2e_tests_complete.md  012_integration_tests_complete.md  013_container_compatibility_test.md  014_kubernetes_test_added.md  015_feature_tests_added.md  016_network_traffic_tests.md  017_heartbeat_timeout_test.md  018_cli_commands_complete.md  019_http_tunnel_usage.md  020_documentation_and_test_strategy.md  021_documentation_complete.md  022_tailscale_feature_explanation.md  023_deprecation_fix.md  024_branch_review.md  025_review_summary.md  026_final_implementation_summary.md  027_complete.md  README.md  agent_container_testing_plan.md  agent_testing_complete.md  agent_testing_validation.md  commands_test_fix_complete.md  commands_test_fix_plan.md  migration_complete.md  network_improvement_complete.md  network_test_improvement_plan.md  network_test_validation.md  network_tests_need_fixing.md  (+1 more)
(+1411 files in other folders)
